--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - run:
           name: plan
           command: terraform plan -var-file="prod.tfvars"
-  build:
+  prod_build:
     docker:
       - image: hashicorp/terraform:0.11.7
     working_directory: ~/cci-terraform
