--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,9 @@ jobs:
       - checkout
       - run:
           name: plan
-          command: terraform plan -var-file="prod.tfvars"
+          command: |
+            terraform init -var-file="prod.tfvars"
+            terraform plan -var-file="prod.tfvars"
   prod_build:
     docker:
       - image: hashicorp/terraform:0.11.7
@@ -27,8 +29,9 @@ jobs:
       - checkout
       - run:
           name: build
-          command: terraform apply -var-file="prod.tfvars"
-
+          command: |
+            terraform apply -var-file="prod.tfvars"
+            terraform apply -var-file="prod.tfvars"
 workflows:
   version: 2
   plan-and-build:
