add environment variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
     docker:
       - image: hashicorp/terraform:0.11.7
     working_directory: ~/cci-terraform
+    environment:
+      GOOGLE_CREDENTIALS: ${HOME}/gcloud-service-key.json
     steps:
       - checkout
       - run:
@@ -25,12 +27,14 @@ jobs:
     docker:
       - image: hashicorp/terraform:0.11.7
     working_directory: ~/cci-terraform
+    environment:
+      GOOGLE_CREDENTIALS: ${HOME}/gcloud-service-key.json
     steps:
       - checkout
       - run:
           name: build
           command: |
-            terraform apply -var-file="prod.tfvars"
+            terraform init -var-file="prod.tfvars"
             terraform apply -var-file="prod.tfvars"
 workflows:
   version: 2
