--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - image: hashicorp/terraform:0.11.7
     working_directory: ~/cci-terraform
     environment:
-      GOOGLE_CREDENTIALS: ${HOME}/gcloud-service-key.json
+      GOOGLE_CREDENTIALS: ~/gcloud-service-key.json
     steps:
       - checkout
       - run:
@@ -28,7 +28,7 @@ jobs:
       - image: hashicorp/terraform:0.11.7
     working_directory: ~/cci-terraform
     environment:
-      GOOGLE_CREDENTIALS: ${HOME}/gcloud-service-key.json
+      GOOGLE_CREDENTIALS: ~/gcloud-service-key.json
     steps:
       - checkout
       - run:
