--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,28 +14,26 @@ jobs:
     docker:
       - image: hashicorp/terraform:0.11.7
     working_directory: ~/cci-terraform
-    environment:
-      GOOGLE_CREDENTIALS: ${HOME}/gcloud-service-key.json
     steps:
       - checkout
       - run:
           name: plan
           command: |
             echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+            GOOGLE_CREDENTIALS=${HOME}/gcloud-service-key.json
             terraform init -var-file="prod.tfvars"
             terraform plan -var-file="prod.tfvars"
   prod_build:
     docker:
       - image: hashicorp/terraform:0.11.7
     working_directory: ~/cci-terraform
-    environment:
-      GOOGLE_CREDENTIALS: ${HOME}/gcloud-service-key.json
     steps:
       - checkout
       - run:
           name: build
           command: |
             echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+            GOOGLE_CREDENTIALS=${HOME}/gcloud-service-key.json
             terraform init -var-file="prod.tfvars"
             terraform apply -var-file="prod.tfvars"
 workflows:
