--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
           name: plan
           command: |
             echo $GCLOUD_SERVICE_KEY > $HOME/gcloud-service-key.json
-            cat $HOME/gcloud-service-key.json
+            echo $GOOGLE_APPLICATION_CREDENTIALS
+            cat $GOOGLE_APPLICATION_CREDENTIALS
             terraform init -var-file="prod.tfvars"
             terraform plan -var-file="prod.tfvars"
   prod_build:
@@ -33,7 +34,8 @@ jobs:
           name: build
           command: |
             echo $GCLOUD_SERVICE_KEY > $HOME/gcloud-service-key.json
-            cat $HOME/gcloud-service-key.json
+            echo $GOOGLE_APPLICATION_CREDENTIALS
+            cat $GOOGLE_APPLICATION_CREDENTIALS
             terraform init -var-file="prod.tfvars"
             terraform apply -var-file="prod.tfvars"
 workflows:
