--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,8 @@ jobs:
       - run:
           name: plan
           command: |
-            echo $GCLOUD_SERVICE_KEY > ~/gcloud-service-key.json
-            echo $GOOGLE_APPLICATION_CREDENTIALS
-            GOOGLE_APPLICATION_CREDENTIALS=~/gcloud-service-key.json
-            cat $GOOGLE_APPLICATION_CREDENTIALS
+            echo $GCLOUD_SERVICE_KEY > $HOME/gcloud-service-key.json
+            GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-service-key.json
             terraform init -var-file="prod.tfvars"
             terraform plan -var-file="prod.tfvars"
   prod_build:
