--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   plan:
     docker:
-      - image: hashicorp/terraform:0.11.7
+      - image: hashicorp/terraform:full
     working_directory: ~/cci-terraform
     steps:
       - checkout
