--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
             echo $HOME/gcloud-service-key.json
             echo $GCLOUD_SERVICE_KEY > $HOME/gcloud-service-key.json
             echo $GOOGLE_APPLICATION_CREDENTIALS
-            GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-service-key.json
+            cat $GOOGLE_APPLICATION_CREDENTIALS
             terraform init -var-file="prod.tfvars"
             terraform plan -var-file="prod.tfvars"
   prod_build:
