--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
             echo $GCLOUD_SERVICE_KEY > ~/gcloud-service-key.json
             GOOGLE_APPLICATION_CREDENTIALS=~/gcloud-service-key.json
             terraform init -var-file="prod.tfvars"
-            terraform apply -var-file="prod.tfvars"
+            terraform apply -var-file="prod.tfvars" -auto-approve
 workflows:
   version: 2
   plan-and-build:
