--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
             terraform plan -var-file="prod.tfvars"
   prod_build:
     docker:
+      - image: google/cloud-sdk:198.0.0
       - image: hashicorp/terraform:0.11.7
     working_directory: ~/cci-terraform
     steps:
@@ -32,10 +33,14 @@ jobs:
       - run:
           name: build
           command: |
-            echo $GCLOUD_SERVICE_KEY > ~/gcloud-service-key.json
+            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            gcloud --quiet config set project $GCLOUD_PROJECT
+
             GOOGLE_APPLICATION_CREDENTIALS=~/gcloud-service-key.json
             terraform init -var-file="prod.tfvars"
             terraform apply -var-file="prod.tfvars" -auto-approve
+
 workflows:
   version: 2
   plan-and-build:
