--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,5 @@
 version: 2
 jobs:
-  authenticate:
-    docker:
-      - image: google/cloud-sdk:198.0.0
-    steps:
-      - run:
-          name: authenticate
-          command: |
-            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
-            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
-            gcloud --quiet config set project $GCLOUD_PROJECT
   plan:
     docker:
       - image: circleci/terraform:0.11.7
@@ -21,9 +11,10 @@ jobs:
           command: |
             echo $GCLOUD_SERVICE_KEY > ~/gcloud-service-key.json
             GOOGLE_APPLICATION_CREDENTIALS=~/gcloud-service-key.json
+            ls -l ~/gcloud-service-key.json
             terraform init -var-file="prod.tfvars"
             terraform plan -var-file="prod.tfvars"
-            TF_LOG=DEBUG terraform apply -var-file="prod.tfvars" -auto-approve
+            terraform apply -var-file="prod.tfvars" -auto-approve
 workflows:
   version: 2
   plan-and-build:
